# laba-osi-2

./: CMakeLists.txt  README.md  main.c  stats.py  test.c
.devcontainer/: Dockerfile  devcontainer.json
include/: erosion2.h  filter.h  matrix.h  matrix1.h  matrix2.h
src/: erosion1.c  erosion2.c  filter.c  matrix.c  matrix1.c  matrix2.c
